--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringMVCFormApp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+	 <maven.compiler.source>19</maven.compiler.source>
+	 <maven.compiler.target>19</maven.compiler.target>
+</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
