--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 	 <maven.compiler.source>19</maven.compiler.source>
 	 <maven.compiler.target>19</maven.compiler.target>
+	 <java.version>19</java.version>
 </properties>
 	<dependencies>
 		<dependency>
