--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,9 @@
 	<build>
 		<finalName>SpringFormApp</finalName>
 	</build>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.2</version>
+	</plugin>
 </project>
