--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,14 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+	</dependencies>
+	<plugins>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-war-plugin</artifactId>
 			<version>2.2</version>
 		</plugin>
-	</dependencies>
+	</plugins>
 	<build>
 		<finalName>SpringFormApp</finalName>
 	</build>
